--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,19 +1,21 @@
-<div class="card">
-  <div class="card-header">
-    <h2>Login</h2>
+<div class="row">
+  <div class="col justify-content-center">
+    <h2 class="login">Login</h2>
+    <form class="form login-form">
+      <div class="form-group">
+        <input class="form-input" type="text" placeholder="Username" id="username-login" />
+      </div>
+      <div class="form-group">
+        <input class="form-input" type="password" placeholder="Password" id="password-login" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Login</button>
+      </div>
+      <div>
+        <a href="/signUp">Sign Up Instead</a>
+      </div>
+    </form>
   </div>
-  <form id="login-form" class="card-body">
-    <div>
-      <label for="username-input-login">Username</label>
-      <input type="text" id="username-input-login" />
-    </div>
-    <div>
-      <label for="password-input-login" class="form-label">Password</label>
-      <input type="password" id="password-input-login" />
-    </div>
-    <button type="submit" id="login-btn" class="btn">Login!</button>
-    <a type="button" href="/signup">Sign up instead</a>
-  </form>
 </div>
 
-<script src="/javascript/login.js"></script>
+<script src="./js/login.js"></script>
