--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,21 +1,22 @@
-<div class="card">
-  <div class="card-header">
-    <h2>Sign Up</h2>
-  </div>
-  <div id="signup" role="tabpanel">
-    <form id="signup-form" class="card-body">
-      <div>
-        <label for="username-input-signup">Username</label>
-        <input type="text" id="username-input-signup" />
-      </div>
-      <div>
-        <label for="password-input-signup">Password</label>
-        <input type="password" id="password-input-signup" />
-      </div>
-      <button type="submit" id="signup-btn" class="btn" >Signup!</button>
-      <a href="/login">Login instead</a>
-    </form>
+<div>
+  <h2 class="signup">Sign Up</h2>
+
+  <form class="form signup-form">
+    <div class="form-group">
+      <input class="form-input" type="text" placeholder="Username" id="username-signup" />
+    </div>
+
+    <div class="form-group">
+      <input class="form-input" type="password" placeholder="Password" id="password-signup" />
+    </div>
+
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">Signup</button>
+    </div>
+  </form>
+  <div>
+    <a href="/login">Login Instead</a>
   </div>
 </div>
 
-<script src="/javascript/signup.js"></script>
+<script src="./js/signUp.js"></script>
